<resources>
    <string name="app_name">Hisab</string>

    <string name="rs" translatable="false">\u20B9</string>
    <string name="paid">Paid</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="remove">Remove</string>
    <string name="today">Today</string>
    <string name="total">Total</string>
    <string name="or">OR</string>
    <string name="attach_image">Attach image</string>
    <string name="attached_image">Attached image</string>
    <string name="shared_expense">Shared expenses</string>
    <string name="cash_expense">Cash expenses</string>
    <string name="contains_image">Contains image</string>
    <string name="expand">Expand</string>
    <string name="received" translatable="false">Received</string>

    <string name="n_members">%1$d members</string>
    <string name="no_member">only you</string>

    <string name="amount">%1$.2f %2$s</string>

    <string name="title_activity_entry">@string/app_name</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_detail_group">Expenses in %1$s</string>
    <string name="title_create_grp">New Group</string>
    <string name="title_create_expense">Add Expense</string>
    <string name="title_edit_expense">Edit expense</string>
    <string name="title_fragment_share">Share with</string>
    <string name="title_rename_grp">Rename</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_others">Others</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_sort">Sort</string>
    <string name="action_rename">Rename</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_delete">Delete</string>
    <string name="action_menu">Menu</string>
    <string name="action_archive">Archive</string>
    <string name="action_info">Info</string>
    <string name="action_add_group">New Group</string>

    <string name="btn_txt_login">Login</string>
    <string name="btn_txt_edit">Edit</string>
    <string name="btn_txt_delete">Delete</string>
    <string name="btn_txt_signup">Create account</string>
    <string name="btn_txt_google_login">Sign in with Google</string>

    <string name="msg_empty">Oops!! Looks like nothing in here</string>
    <string name="msg_select_group">Select a group to see expenses.</string>
    <string name="msg_no_groups">Create a new Group</string>
    <string name="msg_no_groups_suggestion">All groups will appear here.</string>
    <string name="msg_no_expenses">Add a new item</string>
    <string name="msg_no_expenses_suggestion">All items will appear here.</string>
    <string name="msg_no_users">No users found</string>
    <string name="msg_no_users_suggestion">All users will be listed here.</string>
    <string name="msg_share_to_split">Share group with others to split the expense</string>
    <string name="msg_your_clear">You are clear</string>
    <string name="msg_summary_give">Pay %1$.2f %2$s</string>
    <string name="msg_summary_collect">Collect %1$.2f %2$s</string>
    <string name="msg_in_progress">Hold on! loading..</string>
    <string name="msg_signin_with_link">Already registered? <b><u>Login Me</u></b></string>
    <string name="msg_signup_with_link">Don\'t have account? <b><u>Sign up</u></b></string>
    <string name="msg_signin_forget_pswd">Forget password? <b><u>Reset</u></b></string>
    <string name="msg_reset_email_check">We have sent an e-mail to %s with instructions to reset
        the password</string>
    <string name="msg_signup_done_email_check">Sign up successful, check your email to reset password.</string>
    <string name="msg_gen_error">Error occurred! try after a while.</string>
    <string name="msg_grp_created_by_you">You</string>
    <string name="msg_members">Members</string>
    <string name="msg_created_on">Created On</string>
    <string name="msg_author">Author</string>
    <string name="msg_total_expenses">Total Expenses %1$.2f</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_cannot_update">Cannot update expense invalid values</string>
    <string name="title_cab">%1$d Selected</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string name="hint_grp_name">New group\'s name</string>
    <string name="hint_grp_rename">Group\'s name</string>
    <string name="hint_desc">Description</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="hint_search_users">Start typing email</string>

    <string name="label_create">Create</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_done">Done</string>

    <string name="err_required">%1$s cannot be empty</string>
    <string name="err_invalid_amount">Invalid amount</string>
    <string name="err_zero_amount">Must be non zero</string>
    <string name="err_email_taken">This email already exist</string>
    <string name="err_empty_desc">Description cannot be empty</string>
    <string name="err_amount_non_zero_positive">Amount must be a non zero positive value</string>
    <string name="err_long_desc">Keep the description short and crisp.</string>


    <string name="fab_shared">Add Expense</string>
    <string name="fab_paid_received">Cash Entry</string>


    <string name="dialog_key_expense_id">just for id</string>
    <string name="dialog_key_dialog_id">just for id</string>
    <string name="dialog_key_group_id">just for id</string>
    <string name="dialog_key_expense_map">just for id</string>

    <string name="empty" translatable="false"> </string>
    <string name="title_activity_add_group">New Group</string>

    <string name="widget_summary">Group\'s Amount</string>
    <string name="widget_group_name">for %1$s</string>
    <string name="widget_summary_content_desc">Group\'s Amount</string>
    <string name="widget_group_name_content_desc">Group name</string>

    <string name="content_desc_empty_image">Empty image! No content found.</string>
</resources>
