<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_grey_50_24dp"
        android:orderInCategory="10"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_grey_50_24dp"
        android:orderInCategory="20"
        android:title="@string/action_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_grey_50_24dp"
        android:orderInCategory="30"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
</menu>