<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/padding_content"
    android:paddingRight="@dimen/padding_content"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:maxWidth="320dp"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/title"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:buttonSize="wide"
        app:colorScheme="light"/>

    <TextView
        style="@style/Txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="OR"
        android:textAppearance="?android:textAppearance"/>

    <android.support.design.widget.TextInputLayout
        style="@style/SignInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/error"
        style="@style/Txt.SMALL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colorDanger"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/Btn.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="20dp"
        android:text="@string/btn_txt_login"
        android:theme="@style/Btn.Primary"
        />

    <TextView
        android:id="@+id/reset_password"
        style="@style/Txt.SMALL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/msg_signin_forget_pswd"
        android:textStyle="bold"/>

    <TextView
        style="@style/Txt.SMALL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:onClick="loadSignUpFragment"
        android:text="@string/msg_signup_with_link"
        android:textStyle="bold"/>

</LinearLayout>
